--- a/Assignment-2/sign_up.html
+++ b/Assignment-2/sign_up.html
@@ -17,11 +17,19 @@
         <form action="">
             <h1>Sign up</h1>
             <div class="input-box">
-                <input type="email" placeholder="Email" required>
+                <input type="text" placeholder="Username">
                 <i class="bi bi-person-fill"></i>
             </div>
             <div class="input-box">
+                <input type="email" placeholder="Email" required>
+                <i class="mail bi bi-envelope"></i>
+            </div>
+            <div class="input-box">
                 <input type="password" placeholder="Password" required>
+                <i class="lock fa-solid fa-lock"></i>
+            </div>
+            <div class="input-box">
+                <input type="password" placeholder="Confirm Password" required>
                 <i class="lock fa-solid fa-lock"></i>
             </div>
             <div class="term-condition">
@@ -34,5 +42,5 @@
         </form>
     </div>
 </body>
-
+    
 </html>
